work on game page layout

--- a/game.html
+++ b/game.html
@@ -3,8 +3,99 @@
   <head>
     <meta charset="utf-8">
     <title>Columns</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     This is where the game will go!
+    <div class="game-area">
+
+    <div class="game-board">
+      <div id="1" class="grid-square"></div>
+      <div id="2" class="grid-square"></div>
+      <div id="3" class="grid-square"></div>
+      <div id="4" class="grid-square"></div>
+      <div id="5" class="grid-square"></div>
+      <div id="6" class="grid-square"></div>
+      <div id="7" class="grid-square"></div>
+      <div id="8" class="grid-square"></div>
+      <div id="9" class="grid-square"></div>
+      <div id="10" class="grid-square"></div>
+      <div id="11" class="grid-square"></div>
+      <div id="12" class="grid-square"></div>
+      <div id="13" class="grid-square"></div>
+      <div id="14" class="grid-square"></div>
+      <div id="15" class="grid-square"></div>
+      <div id="16" class="grid-square"></div>
+      <div id="17" class="grid-square"></div>
+      <div id="18" class="grid-square"></div>
+      <div id="19" class="grid-square"></div>
+      <div id="20" class="grid-square"></div>
+      <div id="21" class="grid-square"></div>
+      <div id="22" class="grid-square"></div>
+      <div id="23" class="grid-square"></div>
+      <div id="24" class="grid-square"></div>
+      <div id="25" class="grid-square"></div>
+      <div id="26" class="grid-square"></div>
+      <div id="27" class="grid-square"></div>
+      <div id="28" class="grid-square"></div>
+      <div id="29" class="grid-square"></div>
+      <div id="30" class="grid-square"></div>
+      <div id="31" class="grid-square"></div>
+      <div id="32" class="grid-square"></div>
+      <div id="33" class="grid-square"></div>
+      <div id="34" class="grid-square"></div>
+      <div id="35" class="grid-square"></div>
+      <div id="36" class="grid-square"></div>
+      <div id="37" class="grid-square"></div>
+      <div id="38" class="grid-square"></div>
+      <div id="39" class="grid-square"></div>
+      <div id="40" class="grid-square"></div>
+      <div id="41" class="grid-square"></div>
+      <div id="42" class="grid-square"></div>
+      <div id="43" class="grid-square"></div>
+      <div id="44" class="grid-square"></div>
+      <div id="45" class="grid-square"></div>
+      <div id="46" class="grid-square"></div>
+      <div id="47" class="grid-square"></div>
+      <div id="48" class="grid-square"></div>
+      <div id="49" class="grid-square"></div>
+      <div id="50" class="grid-square"></div>
+      <div id="51" class="grid-square"></div>
+      <div id="52" class="grid-square"></div>
+      <div id="53" class="grid-square"></div>
+      <div id="54" class="grid-square"></div>
+      <div id="55" class="grid-square"></div>
+      <div id="56" class="grid-square"></div>
+      <div id="57" class="grid-square"></div>
+      <div id="58" class="grid-square"></div>
+      <div id="59" class="grid-square"></div>
+      <div id="60" class="grid-square"></div>
+      <div id="61" class="grid-square"></div>
+      <div id="62" class="grid-square"></div>
+      <div id="63" class="grid-square"></div>
+      <div id="64" class="grid-square"></div>
+      <div id="65" class="grid-square"></div>
+      <div id="66" class="grid-square"></div>
+      <div id="67" class="grid-square"></div>
+      <div id="68" class="grid-square"></div>
+      <div id="69" class="grid-square"></div>
+      <div id="70" class="grid-square"></div>
+      <div id="71" class="grid-square"></div>
+      <div id="72" class="grid-square"></div>
+    </div>
+
+    <div class="next-piece-area">
+      <p>Next Piece:</p>
+      <div class="preview-box">
+        <div class="preview-piece">
+
+        </div>
+      </div>
+    </div>
+
+    <div class="score-area">
+      <p>Score: <span id="score"> 0 </span></p>
+    </div>
+</div>
   </body>
 </html>
